Agregando proyecto Unity

--- a/index.html
+++ b/index.html
@@ -331,8 +331,6 @@
                                             allowfullscreen></iframe>
                                     </div> -->
                                 </div>
-                                <h5 class="mb-0 text-center"><b>Mechanic 3 - Create random obstacle and Death on hit
-                                        event</b></h5>
                                 <p class="text-center p-4">This mechanic add random obstacle while the character is
                                     moving forward,
                                     when the character hits
@@ -413,7 +411,7 @@
                                             allowfullscreen></iframe>
                                     </div> -->
                                 </div>
-                                <h5 class="mb-0 text-center"><b>Mechanic 1</b></h5>
+                                <!-- <h5 class="mb-0 text-center"><b>Mechanic 1</b></h5> -->
                                 <p class="text-center p-4">This mechanic gets a mouse X,Y inputs to set an actor
                                     rotation to rotate
                                     the maze.</p>
@@ -433,7 +431,7 @@
                                             allowfullscreen></iframe>
                                     </div> -->
                                 </div>
-                                <h5 class="mb-0 text-center"><b>Mechanic 2</b></h5>
+                                <!-- <h5 class="mb-0 text-center"><b>Mechanic 2</b></h5> -->
                                 <p class="text-center p-4">This mechanic activate the win condition when the ball hits a
                                     trigger box
                                     when is escaping the
@@ -485,7 +483,6 @@
                                             allowfullscreen></iframe>
                                     </div> -->
                     </div>
-                    <h5 class="mb-0 text-center"><b>Mechanic 1</b></h5>
                     <p class="text-center p-4">Move around the camera of the actor.</p>
                 </div>
                 <div class="slider-card">
@@ -503,7 +500,6 @@
                                             allowfullscreen></iframe>
                                     </div> -->
                     </div>
-                    <h5 class="mb-0 text-center"><b>Mechanic 2</b></h5>
                     <p class="text-center p-4">Move the character around the world.
                     </p>
                 </div>
@@ -523,7 +519,6 @@
                                                             allowfullscreen></iframe>
                                                     </div> -->
                     </div>
-                    <h5 class="mb-0 text-center"><b>Mechanic 3</b></h5>
                     <p class="text-center p-4">Shoot and destroy enemy on hit.
                     </p>
                 </div>
@@ -531,6 +526,91 @@
         </div>
     </div>
 </section>
+
+            <hr class="m-0" />
+            <br>
+
+<!-- Vhirdoc Unity-->
+<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+    <div class="flex-grow-1">
+        <h3 class="mb-0">Vhirdoc - Unity</h3>
+        <br>
+        <p>Vhirdoc is a project inspired by the famous game Flappy Bird.</p>
+        <br>
+        <div class="iframe-container">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/PEMQFtYidWM?autoplay=1&mute=1&controls=0&playlist=PEMQFtYidWM&loop=1&"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
+
+<section id="slider" class="pt-5">
+    <div class="container">
+        <h1 class="text-center"><b>Mechanics Log</b></h1>
+        <div class="slider">
+            <div class="owl-carousel">
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/V-M1.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/jfj1AxZY-Ik?autoplay=1&mute=1&controls=0&playlist=jfj1AxZY-Ik&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                    </div>
+                    <p class="text-center p-4">Spawn obstacles in the scene.</p>
+                </div>
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/V-M2.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                    </div>
+                    <p class="text-center p-4">Shows the Game Over UI when the character hit the obstacle and reload the game when press the play button.
+                    </p>
+                </div>
+
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/V-M3.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                                        <iframe width="560" height="315"
+                                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                                            title="YouTube video player" frameborder="0"
+                                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                            allowfullscreen></iframe>
+                                                    </div> -->
+                    </div>
+                    <p class="text-center p-4">Add a score count when pass through the obstacles.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<hr class="m-0" />
 
             <div id="parallaxAboutMe">
             </div>
