Agregando proyecto KR-Unity

--- a/index.html
+++ b/index.html
@@ -612,6 +612,90 @@
 </section>
 <hr class="m-0" />
 
+<br>
+
+<!-- KnightRunner Unity-->
+<div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+    <div class="flex-grow-1">
+        <h3 class="mb-0">KnightRunner - Unity</h3>
+        <br>
+        <p>KnightRunner is a 2D platform project, moving forward and trying to get as many collectibles as possible.</p>
+        <br>
+        <div class="iframe-container">
+            <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/04QwsVZ9mmU?autoplay=1&mute=1&controls=0&playlist=04QwsVZ9mmU&loop=1&"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+        </div>
+    </div>
+</div>
+
+<section id="slider" class="pt-5">
+    <div class="container">
+        <h1 class="text-center"><b>Mechanics Log</b></h1>
+        <div class="slider">
+            <div class="owl-carousel">
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/KR-M1.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/jfj1AxZY-Ik?autoplay=1&mute=1&controls=0&playlist=jfj1AxZY-Ik&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                    </div>
+                    <p class="text-center p-4">Spawn platforms when the character is moving forward and destroy platforms that the character is leaving behind.</p>
+                </div>
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/KR-M2.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                        <iframe width="560" height="315"
+                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                            title="YouTube video player" frameborder="0"
+                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                            allowfullscreen></iframe>
+                                    </div> -->
+                    </div>
+                    <p class="text-center p-4">If the character die shows a UI to reload the game and start over again.
+                    </p>
+                </div>
+
+                <div class="slider-card">
+                    <div class="d-flex justify-content-center align-items-center mb-4">
+                        <div class="video" id="home">
+                            <video class="img-fluid" autoplay muted loop id="back-video">
+                                <source src="/assets/img/KR-M3.mp4" type="video/mp4">
+                            </video>
+                        </div>
+                        <!-- <div class="iframe-container">
+                                                        <iframe width="560" height="315"
+                                                            src="https://www.youtube.com/embed/CEZMCGS1CYc?autoplay=1&mute=1&controls=0&playlist=CEZMCGS1CYc&loop=1&"
+                                                            title="YouTube video player" frameborder="0"
+                                                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                                            allowfullscreen></iframe>
+                                                    </div> -->
+                    </div>
+                    <p class="text-center p-4">Add a score count when pass through the coins.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+<hr class="m-0" />
+
             <div id="parallaxAboutMe">
             </div>
             <hr class="m-0" />
