cambiando redaccion proyectos Unity

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
     <div class="flex-grow-1">
         <h3 class="mb-0">FPS-D - Unity</h3>
         <br>
-        <p>FPS-D is a simple project First person shooter created in Unity.</p>
+        <p>FPS-D is a simple project First person shooter created in Unity by a tutorial made on Platzi.</p>
         <br>
         <div class="iframe-container">
             <iframe width="560" height="315"
@@ -535,7 +535,7 @@
     <div class="flex-grow-1">
         <h3 class="mb-0">Vhirdoc - Unity</h3>
         <br>
-        <p>Vhirdoc is a project inspired by the famous game Flappy Bird.</p>
+        <p>Vhirdoc is a project by a tutorial made on Platzi, inspired by the famous game Flappy Bird.</p>
         <br>
         <div class="iframe-container">
             <iframe width="560" height="315"
@@ -619,7 +619,8 @@
     <div class="flex-grow-1">
         <h3 class="mb-0">KnightRunner - Unity</h3>
         <br>
-        <p>KnightRunner is a 2D platform project, moving forward and trying to get as many collectibles as possible.</p>
+        <p>KnightRunner is a 2D platform project by a tutorial made on Platzi, moving forward and trying to get as many
+        collectibles as possible.</p>
         <br>
         <div class="iframe-container">
             <iframe width="560" height="315"
